<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UnusedAttribute,ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_9sdp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:autoSizeTextType="uniform"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center"
            android:text="@string/choose_date_format_pattern"
            android:textColor="@color/dialog_on_container"
            android:textSize="@dimen/_18ssp" />
        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:autoSizeTextType="uniform"
            android:clickable="false"
            android:focusable="false"
            android:layout_below="@id/header"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="start"
            android:text="@string/choose_date_format_pattern_desc"
            android:textColor="@color/dialog_on_container_variant"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc"
            android:layout_marginTop="@dimen/_16sdp"
            android:inputType="none"
            android:theme="@style/CustomEditText"
            app:boxStrokeColor="@color/input_stroke"
            app:boxStrokeErrorColor="@color/app_input_error"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:cursorErrorColor="@color/app_input_error"
            app:errorTextColor="@color/app_input_error"
            app:hintTextColor="@color/app_input_hint">

            <AutoCompleteTextView
                android:id="@+id/autoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/gilroy_regular"
                android:gravity="center_vertical"
                android:hint="@string/date_format"
                android:inputType="none"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/dialog_on_container"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:theme="@style/CustomAutoCompleteTextViewStyle" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/dialog_button_text"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/dialog_button_background"
            tools:ignore="MissingConstraints,UnusedAttribute,TouchTargetSizeCheck" />


    </RelativeLayout>


</RelativeLayout>



