<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:transitionName="food_list"
    tools:ignore="UnusedAttribute,UseCompoundDrawables,ContentDescription">


    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/userImage"
            android:layout_alignBottom="@id/userImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_toStartOf="@id/userImage"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center|start"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/app_name"
            android:textColor="@color/app_on_primary"
            android:textSize="@dimen/_20ssp" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="@dimen/_37sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/search_view_bg"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_effect_rectangle_v9sdp"
            android:padding="@dimen/_9sdp"
            android:src="@drawable/ic_ui_user" />
    </RelativeLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topLayout"
        android:layout_marginTop="@dimen/_9sdp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fitsSystemWindows="false"
        android:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_primary"
            android:elevation="3dp"
            android:visibility="visible"
            app:elevation="3dp"
            app:expanded="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_primary"
                android:elevation="0dp"
                android:fitsSystemWindows="false"
                app:contentScrim="@color/app_primary"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:statusBarScrim="@color/app_primary"
                app:titleEnabled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/search_layout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_37sdp"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:background="@drawable/search_view_bg"
                        android:visibility="visible">

                        <ImageView
                            android:id="@+id/search_bar_hint_icon"
                            android:layout_width="@dimen/_28sdp"
                            android:layout_height="@dimen/_28sdp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:padding="@dimen/_6sdp"
                            android:src="@drawable/ic_ui_search" />

                        <EditText
                            android:id="@+id/search_bar_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:layout_toStartOf="@id/search_bar_voice_icon"
                            android:layout_toEndOf="@id/search_bar_hint_icon"
                            android:autoSizeTextType="uniform"
                            android:background="@null"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:fontFamily="@font/gilroy_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/search_hint"
                            android:imeOptions="actionDone"
                            android:includeFontPadding="true"
                            android:inputType="text"
                            android:textColor="@color/app_input_text"
                            android:textColorHint="@color/app_input_hint"
                            android:textStyle="bold"
                            tools:ignore="Autofill" />

                        <ImageView
                            android:id="@+id/search_bar_voice_icon"
                            android:layout_width="@dimen/_28sdp"
                            android:layout_height="@dimen/_28sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="@drawable/ripple_effect_circle_solid"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/ic_ui_microphone" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/categoryLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/filter"
                            android:layout_width="@dimen/_34sdp"
                            android:layout_height="@dimen/_34sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:background="@drawable/search_view_bg"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="@drawable/ripple_effect_rectangle_v9sdp"
                            android:padding="@dimen/_9sdp"
                            android:src="@drawable/ic_ui_settings_filter" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/categoryRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="false"
                            android:background="@color/transparent"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            android:orientation="horizontal"
                            android:overScrollMode="never"
                            android:scrollbars="none"
                            android:visibility="visible"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/category_item" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:itemCount="5"
            tools:listitem="@layout/main_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:clickable="true"
            android:contentDescription="@string/add_account"
            android:focusable="true"
            android:src="@drawable/ic_ui_add"
            app:backgroundTint="@color/app_secondary_container"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/app_secondary_container_tint" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintVertical_bias="0.40">

            <ImageView
                android:id="@+id/emptyDataImageView"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_ui_folder_open"
                android:visibility="gone"
                app:tint="@color/app_primary_tint"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/emptyDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/no_saved_account"
                android:textColor="@color/app_primary_tint"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>